--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,3 @@
 RewriteEngine On
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule ^(.*)＄ index.php
+RewriteBase /
+RewriteRule ^(.+)$ index.php?cmd=$1 [QSA,L]
