--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,4 @@
 RewriteEngine On
 RewriteBase /
-RewriteRule ^(.+)$ index.php?cmd=$1 [QSA,L]
+RewriteRule ^(.+)$ index.php?cmd=$1 [QSA,L] - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization},L]
+RewriteRule ^ - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization},L]
